# ai-builds

./: .gitignore  README.md
Gemma-270M/: .gitignore  Gemma_3_270_M_Small_Language_Model_Scratch_Final.ipynb  OPTIMIZATION_SUMMARY.md  README.md  debug_notebook.py  generate.py  gpu_memory_analysis.md  pyproject.toml  run_pipeline.py  test_270m_config.py
Gemma-270M/checkpoints/: metrics.json
Gemma-270M/configs/: conservative_config.yaml  optimized_config.yaml  rtx4070_config.yaml
Gemma-270M/examples/: batch_generation.py  interactive_chat.py  simple_generation.py
Gemma-270M/gemma_270m/: __init__.py  config.py  data.py  inference.py  model.py  trainer.py
Gemma-270M/scripts/: train.py
Gemma-270M/tests/: test_model.py  test_training.py
