[project]
name = "gemma-270m"
version = "0.1.0"
description = "Gemma-270M Small Language Model implementation from scratch"
requires-python = ">=3.11.9"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.56.0",
    "datasets>=4.0.0",
    "tiktoken>=0.11.0",
    "jupyterlab>=4.4.0",
    "nbstripout>=0.8.0",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.0",
    "numpy>=2.1.0",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
default = true
