[project]
name = "gemma-270m"
version = "0.1.0"
description = "Gemma-270M Small Language Model implementation from scratch"
requires-python = ">=3.11.9,<3.14"
dependencies = [
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tiktoken>=0.5.0",
    "jupyterlab>=4.0.0",
    "nbstripout>=0.6.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu121"
extra-index-url = ["https://pypi.org/simple"]
